Disable rubocop's rspec described_class rule.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,3 +33,6 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Exclude:
     - spec/system/**/*.rb
+
+RSpec/DescribedClass:
+  EnforcedStyle: explicit
