--- a/config/docker/rails_template_test/docker-compose.yml
+++ b/config/docker/rails_template_test/docker-compose.yml
@@ -16,9 +16,16 @@ services:
     environment:
       RAILS_ENV: test
       RAILS_TEMPLATE_DATABASE_HOST: db
+    volumes:
+      - ../../..:/app
+      - vendor_bundle:/app/vendor/bundle
+      - node_modules:/app/node_modules
     depends_on:
       db:
         condition: service_healthy
     # Fix Selenium::WebDriver::Error::InvalidSessionIdError: invalid session id.
     # Default memory limit is 64MB, which is not enough for Chrome.
     shm_size: 256m
+volumes:
+  vendor_bundle:
+  node_modules:
