--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run docker test
-        run: ./bin/docker_test --build
+        run: ./bin/docker_test
