--- a/config/docker/rails_template_test/docker-compose.yml
+++ b/config/docker/rails_template_test/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - ../../..:/app
       - tmp:/app/tmp
+      - assets_builds:/app/app/assets/builds
       - vendor_bundle:/app/vendor/bundle
       - node_modules:/app/node_modules
     depends_on:
@@ -29,5 +30,6 @@ services:
     shm_size: 256m
 volumes:
   tmp:
+  assets_builds:
   vendor_bundle:
   node_modules:
