--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -35,9 +35,10 @@ RemoveUnusedMethodsInHelpersCheck:
   {
     except_methods:
       [
-        "ButtonHelper#button_primary_style",
-        "ButtonHelper#button_secondary_style",
-        "ButtonHelper#button_danger_style",
+        "ButtonHelper#btn_primary_style",
+        "ButtonHelper#btn_secondary_style",
+        "ButtonHelper#btn_danger_style",
+        "ButtonHelper#btn_tag",
       ],
   }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [] }
