Add lnk_to helper.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,9 @@ Metrics/AbcSize:
 Metrics/MethodLength:
   Enabled: false
 
+Metrics/ParameterLists:
+  Enabled: false
+
 RSpec/ExampleLength:
   Exclude:
     - spec/system/**/*.rb
