Revert "Use Utils.env_or_secret instead of Utils.env_or_credential."
This reverts commit f4ae310973ad3b192fce55040235b94435b726b6.

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= Utils.env_or_secret "rails_template_redis_url", "redis://127.0.0.1:6379/1" %>
+  url: <%= Utils.env_or_credential "rails_template_redis_url", "redis://127.0.0.1:6379/1" %>
   channel_prefix: rails_test_production
